# riak-rust-client

./: .gitmodules  .travis.yml  Cargo.toml  README.md
src/: bucket.rs  connection.rs  data_type.rs  errors.rs  lib.rs  object.rs  preflist.rs  secondary_index.rs  stream.rs  utils.rs  yokozuna.rs
src/rpb/: codes.rs  mod.rs  riak.rs  riak_dt.rs  riak_kv.rs  riak_search.rs  riak_ts.rs  riak_yokozuna.rs
tests/: client_basics.rs  object.rs
